CHANGES IN VERSION 0.99.8
------------------------
- update to the database used in annotateDB(), cleaned data extensively
- Correct CoNGAfy() function to fix mean-based reduction

CHANGES IN VERSION 0.99.7
------------------------
- Added one hot auto encoder to model options


CHANGES IN VERSION 0.99.6
------------------------

* After comparing the outputs of various calculations Trex offers - by far the best performing is returning the auto encoded values. Removed distance calculations and gene usage statistics. 
* Expanding auto encoder models to use 288,090 unique TCRs and 455,779 unique TCRBs derived from both single-cell cohorts and bulk databases - VDJdb, McPAS, IEdb, and TRAdb.
* Plan to add one-hot auto-encoder for sequence information and a database of TCRs


CHANGES IN VERSION 0.99.5
------------------------

* CoNGAfy now can reduce the size of multiple dimensions using mean or distance. 
* Moving the auto encoder distance back to cosine distance - per row the calculation will be 1-abs(cos())
* Modified runTrex() to allow for generating layers without the edit distance (before it just errored out). 

CHANGES IN VERSION 0.99.4
------------------------

* Added CoNGAfy() function to reduce RNA to a single cell per clonotype based on either mean expression or euclidean distance of the PCA.
* Changed normalization for length-based distance calculation, was effectively halving the true distance, over calling neighbors when using thresholding. 
* AA property normalization now uses Euclidean distance instead of cosine. Simplifies the normalization. 
* Removed the multicore parallelization, after implementing the above (and removing the over calling issue) the code is substantially faster when using thresholding!


CHANGES IN VERSION 0.99.3
------------------------

* Added clonalCommunity() function to allow for assignment and subsequent regression of feature space of groupings.