@@ -34,5 +34,6 @@ importFrom(keras,load_model_hdf5)
 importFrom(reticulate,array_reshape)
 importFrom(rlang,"%||%")
 importFrom(stats,as.formula)
+importFrom(stringdist,stringdist)
 importFrom(stringr,str_split)
 importFrom(tensorflow,tf)
