@@ -4,12 +4,15 @@
 \alias{annotateDB}
 \title{Use reference database to annotate cdr3 sequences}
 \usage{
-annotateDB(sc, chains = "TRB")
+annotateDB(sc, chains = "TRB", edit.distance = 0)
 }
 \arguments{
 \item{sc}{Single Cell Object in Seurat or SingleCell Experiment format}
 
 \item{chains}{TRA or TRB}
+
+\item{edit.distance}{Number of amino acid residues different than reference
+using Levenshtein distance}
 }
 \value{
 Seurat or SingleCellExperiment object with epitope information
