@@ -2,6 +2,7 @@ CHANGES IN VERSION 0.99.8
 ------------------------
 - update to the database used in annotateDB(), cleaned data extensively
 - Correct CoNGAfy() function to fix mean-based reduction
+- Added edit distance parameter to annotateDB()
 
 CHANGES IN VERSION 0.99.7
 ------------------------
